--- a/conf-insecure/xin-xin.me.conf
+++ b/conf-insecure/xin-xin.me.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name xin-xin.me www.xin-xin.me stage.xin-xin.me;
+    server_name xin-xin.me www.xin-xin.me new.xin-xin.me stage.xin-xin.me;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -16,7 +16,7 @@ server {
     server_name unsafe.xin-xin.me;
 
     location / {
-        proxy_pass http://127.0.0.1:8081;
+        proxy_pass http://main-website;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
