Use new domain for now

--- a/conf-secure/xin-xin.me.conf
+++ b/conf-secure/xin-xin.me.conf
@@ -1,14 +1,14 @@
 server {
     listen 443 ssl;
-    server_name xin-xin.me www.xin-xin.me;
+    server_name xin-xin.me www.xin-xin.me new.xin-xin.me;
 
-    ssl_certificate /etc/letsencrypt/live/xin-xin.me/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/xin-xin.me/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/new.xin-xin.me/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/new.xin-xin.me/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass http://127.0.0.1:8081;
+        proxy_pass http://main-website;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -43,8 +43,8 @@ server {
     listen 443 ssl;
     server_name stage.xin-xin.me;
 
-    ssl_certificate /etc/letsencrypt/live/xin-xin.me/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/xin-xin.me/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/new.xin-xin.me/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/new.xin-xin.me/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
