--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,11 +16,13 @@ services:
       - ./conf-secure/:/etc/nginx/conf.d/:ro
       - /mnt/thevenin_data/certbot/conf/:/etc/letsencrypt/:ro
     command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
-  certbot:
+  certbot: &certbot
     image: certbot/certbot
     volumes:
       - /mnt/thevenin_data/certbot/www/:/var/www/certbot/:rw
       - /mnt/thevenin_data/certbot/conf/:/etc/letsencrypt/:rw
+  certbot-autorenew:
+    <<: *certbot
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
   main-website:
     image: xinxinw/xin-xin.me
