--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,11 @@ services:
     volumes:
       - /mnt/thevenin_data/certbot/www/:/var/www/certbot/:rw
       - /mnt/thevenin_data/certbot/conf/:/etc/letsencrypt/:rw
+    profiles:
+      - donotstart
   certbot-autorenew:
     <<: *certbot
+    profiles: []
     restart: unless-stopped
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
   main-website:
