--- a/conf-insecure/xin-xin.me.conf
+++ b/conf-insecure/xin-xin.me.conf
@@ -16,7 +16,7 @@ server {
     server_name unsafe.xin-xin.me;
 
     location / {
-        proxy_pass http://main-website;
+        proxy_pass http://main-website:8080;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
