--- a/conf-secure/xin-xin.me.conf
+++ b/conf-secure/xin-xin.me.conf
@@ -8,7 +8,7 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass http://main-website;
+        proxy_pass http://main-website:8080;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
