Make text-edit work

--- a/conf-secure/xin-xin.me.conf
+++ b/conf-secure/xin-xin.me.conf
@@ -8,7 +8,7 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass http://main-website:8080;
+        proxy_pass http://main-website:8080/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -16,15 +16,15 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    location /php/ {
-        proxy_pass http://127.0.0.1:8085/prod/;
+    location /php/text-edit/ {
+        proxy_pass http://text-edit/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
-        proxy_redirect http://$host:8085/prod/ /php/;
-        proxy_redirect /prod/ /php/;
+        proxy_redirect http://text-edit/ /php/text-edit/;
+        proxy_redirect / /php/text-edit/;
     }
 
     location /code/hyphen/ {
