Add mysql and phpmyadmin

--- a/conf-secure/xin-xin.me.conf
+++ b/conf-secure/xin-xin.me.conf
@@ -27,6 +27,15 @@ server {
         proxy_redirect / /php/text-edit/;
     }
 
+    location /phpmyadmin/ {
+        proxy_pass http://phpmyadmin/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
     location /code/hyphen/ {
         proxy_pass http://127.0.0.1:8088/;
         proxy_http_version 1.1;
